Fixed menu overflow

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -65,16 +65,6 @@
   border-color: rgb(107, 52, 151);
 }
 
-body.menu-open {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 100vh;
-  overflow-y: auto;
-  overscroll-behavior: contain;
-}
-
 @media (min-width: 1920px) {
   .header {
     padding: 1.8rem 1rem;
@@ -111,10 +101,19 @@ body.menu-open {
     align-items: center;
     gap: 2rem;
     z-index: 1000;
+    overflow-y: auto;
+    overscroll-behavior: contain;
   }
 
   .btn-resume {
     padding: 0.5rem 1rem;
     border-radius: 4px;
+  }
+
+  .no-scroll {
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
   }
 }
